# ml-diabetes-spam-prediction

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Diabetes_Visualisation_ML.ipynb  Makefile  README.md  SHAP_diabete_analysis.ipynb  SPAM_Visualization.ipynb  main.py  preprocessing.py  pyproject.toml
.ipynb_checkpoints/: Random_Forest_Spam-checkpoint.ipynb
Notebooks/: Diabetes_Visualisation_ML.ipynb  SPAM_Visualization.ipynb
Visualisation notebooks/: Diabetes_Visualisation_ML.ipynb  SPAM_Visualization.ipynb
model_weights/: best_random_forest_1.joblib
src/: RForest.py  interpretability.py  kernel_methods.py  knn.py  model_interface.py  neural_network.py  nn_interface.py  preprocessing.py  test.py  test_unit.py  utils.py
